[gd_scene load_steps=15 format=2]

[ext_resource path="res://0x0.jpeg" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://enemy1.tscn" type="PackedScene" id=3]
[ext_resource path="res://ShipporiAntiqueB1-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://flapp.gd" type="Script" id=5]
[ext_resource path="res://Qub.tres" type="Theme" id=6]
[ext_resource path="res://Lose menu.gd" type="Script" id=7]
[ext_resource path="res://festv-frlix.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=3]
size = 512
outline_size = 1
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 439, 24.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1000, 2000 )

[sub_resource type="DynamicFont" id=13]
size = 64
outline_size = 1
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 447, 672 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="player"]
scale = Vector2( 0.066, 0.066 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="player"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.358
margin_left = -38.5
margin_top = -456.0
margin_right = 284.5
margin_bottom = 286.0
rect_scale = Vector2( 0.202363, 0.214004 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deleter" type="Area2D" parent="player"]
position = Vector2( 0, 304 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Deleter"]
position = Vector2( -3, 540.5 )
shape = SubResource( 4 )

[node name="Button" type="TouchScreenButton" parent="player"]
position = Vector2( -980, -1592 )
shape = SubResource( 5 )
shape_visible = false
action = "Flap"

[node name="Lose menu" type="Control" parent="player"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.0
margin_top = -125.0
margin_right = -113.0
margin_bottom = -125.0
theme = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="player/Lose menu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = 241.0
text = "Again?"

[node name="Score" type="Label" parent="player/Lose menu"]
margin_left = 10.0
margin_top = -3.0
margin_right = 214.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D2" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Node2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -25, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 0.5
autoplay = true

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 232.5
margin_top = 968.0
margin_right = 4625.5
margin_bottom = 1710.0
rect_scale = Vector2( 0.0983193, 0.107524 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "SWIPE TO JUMP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="player/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="player/Area2D" to="player" method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="player/Deleter" to="." method="_on_Deleter_area_entered"]
[connection signal="button_down" from="player/Lose menu/Button" to="." method="_on_Button_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
